# cisco-ip-phone-services-toolkit

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  release  requirements.txt  setup.cfg  setup.py
app_server/: api.py
cisco_ip_phone_services/: CiscoIPPhone.xsd  __init__.py  base.py
cisco_ip_phone_services/templates/: CiscoIPPhoneGraphicFileMenu.j2  CiscoIPPhoneGraphicMenu.j2  CiscoIPPhoneImage.j2  CiscoIPPhoneMenu.j2
cisco_services/: __init__.py  __main__.py  base.py
cisco_services/templates/: CiscoIPPhoneIconMenu.j2  CiscoIPPhoneResponse.j2  CiscoIPPhoneStatus.j2
ciscoipphone/: __init__.py  base.py  services.py  utils.py
phone_services/: __init__.py  __main__.py  base.py
phone_services/templates/: CiscoIPPhoneDirectory.j2  CiscoIPPhoneError.j2  CiscoIPPhoneExecute.j2  CiscoIPPhoneGraphicFileMenu.j2  CiscoIPPhoneGraphicMenu.j2  CiscoIPPhoneIconFileMenu.j2  CiscoIPPhoneImageFile.j2  CiscoIPPhoneInput.j2  CiscoIPPhoneStatusFile.j2  CiscoIPPhoneText.j2
services/: runserver.py
services/utils/: pagination.py
tests/: readme_ciscoipphone_expected  readme_ciscoipphonedirectory_expected  test_functional.py  testingutils.py
