[bumpversion]
commit = True
tag = True
push = yes
current_version = 2.0.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize =
	{major}.{minor}.{patch}
extra-add = CHANGELOG.md
pre-commit-hooks = github_changelog_generator --future-release %{new_version}

[metadata]
description-file = README.md
